--- a/SprawlingLearningApplication/src/main/resources/templates/customer/addCustomer.html
+++ b/SprawlingLearningApplication/src/main/resources/templates/customer/addCustomer.html
@@ -10,11 +10,11 @@
 <h2>Adding New Customer</h2>
 <form action="#" th:action="@{/addCustomer}" th:object="${customer}" method="post">
     <label for="name">Name</label>
-    <input type="text" th:field="*{name}" id="name" placeholder="Name">
+    <input type="text" th:field="*{name}" name="name" id="name" placeholder="Name">
     <label for="email">Email</label>
-    <input type="text" th:field="*{email}" id="email" placeholder="Email">
+    <input type="text" th:field="*{email}" name="email" id="email" placeholder="Email">
     <label for="address">Address</label>
-    <input type="text" th:field="*{address}" id="address" placeholder="Address">
+    <input type="text" th:field="*{address}" name="address" id="address" placeholder="Address">
     <input type="submit" value="Add New Customer">
 </form>
 
